overflow fix again ugggggh

--- a/assets/stylesheets/prototype/components/_styleguide.scss
+++ b/assets/stylesheets/prototype/components/_styleguide.scss
@@ -147,7 +147,7 @@
 }
 
 .sg-responsive-preview {
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .sg-responsive-preview .iframe__preview {
